improve project after review